--- a/travis_cpp_tutorial.lyx
+++ b/travis_cpp_tutorial.lyx
@@ -12284,7 +12284,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_rcpp/src/do_magic_cpp.h"
+filename "travis_qmake_gcc_cpp11_rcpp/src/do_magic_cpp.h"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12331,7 +12331,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_rcpp/src/do_magic_cpp.cpp"
+filename "travis_qmake_gcc_cpp11_rcpp/src/do_magic_cpp.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12418,7 +12418,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_rcpp/main.cpp"
+filename "travis_qmake_gcc_cpp11_rcpp/main.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12466,7 +12466,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_rcpp/domagic.pro"
+filename "travis_qmake_gcc_cpp11_rcpp/domagic.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12644,7 +12644,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_rcpp/build_cpp.sh"
+filename "travis_qmake_gcc_cpp11_rcpp/build_cpp.sh"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -12706,7 +12706,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_rcpp/R/do_magic_r.R"
+filename "travis_qmake_gcc_cpp11_rcpp/R/do_magic_r.R"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12773,7 +12773,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_rcpp/tests/testthat/test-do_magic.R"
+filename "travis_qmake_gcc_cpp11_rcpp/tests/testthat/test-do_magic.R"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -12826,7 +12826,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_rcpp/install_r_packages.R"
+filename "travis_qmake_gcc_cpp11_rcpp/install_r_packages.R"
 lstparams "breaklines=true,language={bash}"
 
 \end_inset
@@ -12877,7 +12877,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_rcpp/.travis.yml"
+filename "travis_qmake_gcc_cpp11_rcpp/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13230,56 +13230,6 @@ reference "sec:travis_qmake_gcc_cpp98"
 \end_layout
 
 \begin_layout Standard
-The bash build script to build this, run this and measure the code coverage:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float algorithm
-placement H
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset CommandInset include
-LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_sfml/build.sh"
-lstparams "breaklines=true,language={bash}"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption Standard
-
-\begin_layout Plain Layout
-build.sh
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-The bash script has the same lines as the basic project in chapter 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "sec:travis_qmake_gcc_cpp98"
-
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Standard
 Setting up Travis is done by the following .travis.yml:
 \end_layout
 
@@ -13386,7 +13336,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_urho3d/mastercontrol.cpp"
+filename "travis_qmake_gcc_cpp11_urho3d/mastercontrol.cpp"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13430,7 +13380,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_urho3d/travis_qmake_gcc_cpp11_urho3d.pro"
+filename "travis_qmake_gcc_cpp11_urho3d/travis_qmake_gcc_cpp11_urho3d.pro"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
@@ -13475,56 +13425,6 @@ reference "sec:travis_qmake_gcc_cpp98"
 \end_layout
 
 \begin_layout Standard
-The bash build script to build this, run this and measure the code coverage:
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float algorithm
-placement H
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset CommandInset include
-LatexCommand lstinputlisting
-filename "../travis_qmake_gcc_cpp11_urho3d/build.sh"
-lstparams "breaklines=true,language={bash}"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption Standard
-
-\begin_layout Plain Layout
-build.sh
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-The bash script has the same lines as the basic project in chapter 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "sec:travis_qmake_gcc_cpp98"
-
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Standard
 Setting up Travis is done by the following .travis.yml:
 \end_layout
 
@@ -13538,7 +13438,7 @@ status open
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand verbatiminput
-filename "../travis_qmake_gcc_cpp11_urho3d/.travis.yml"
+filename "travis_qmake_gcc_cpp11_urho3d/.travis.yml"
 lstparams "breaklines=true,language={C++}"
 
 \end_inset
